added route for getting single team result
