# swagger.yaml
@@ -14,7 +14,7 @@ paths:
     get:
       summary: "Show week results"
       description: "Return list of teams and their results based on the week"
-      operationId: "getPetById"
+      operationId: "getWeekResult"
       produces:
       - "application/json"
       parameters:
@@ -29,6 +29,32 @@ paths:
           description: "successful operation"
           schema:
             $ref: "#/definitions/Result"
+  /matches/{team_id}:
+    get:
+      summary: "Show all matches for a single team"
+      description: "Return list of single team's matches"
+      operationId: "getTeamMatches"
+      produces:
+      - "application/json"
+      parameters:
+      - name: "team_id"
+        in: "path"
+        description: "Valid team id (1 to 32)"
+        required: true
+        type: "integer"
+        format: "int64"
+      responses:
+        "200":
+          description: "successful operation"
+          schema:
+            type: "object"
+            properties:
+              team:
+                $ref: "#/definitions/Team"
+              matches:
+                type: "array"
+                items:
+                  $ref: "#/definitions/Match"
 definitions:
   Group:
     type: "object"
